--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,12 +12,16 @@ idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.4
-openai==1.9.0
+openai==1.10.0
 pydantic==2.5.3
 pydantic_core==2.14.6
+python-dotenv==1.0.1
+python-multipart==0.0.6
 sniffio==1.3.0
 starlette==0.35.1
 tqdm==4.66.1
 typing_extensions==4.9.0
-uvicorn==0.26.0
+uvicorn==0.27.0
+websockets==12.0
 Werkzeug==3.0.1
+wsproto==1.2.0
