--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,14 @@
     "@mui/icons-material": "^5.15.5",
     "@mui/material": "^5.15.5",
     "chart.js": "^4.4.1",
+    "md5": "^2.3.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/md5": "^2.3.5",
     "@types/node": "^20.11.7",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
